--- a/index.html
+++ b/index.html
@@ -4,8 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Login</title>
-  <link rel="stylesheet" href="/css/login.css"/>
-</head>
+<link rel="stylesheet" href="/Proyect/css/login.css"></head>
 <body>
   <div class="login-container">
     <h2>Login</h2>
@@ -20,6 +19,6 @@
     </div>
     <p id="errorMessage"></p>
   </div>
-  <script src="/js/login.js"></script>
+<script src="/Proyect/js/script.js"></script>
 </body>
 </html>
