--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 </form>
     <div class="extra-options">
       <a href="/html/forgot.html">Forgot your password?</a>
-      <p>Don't have an account? <a href="/html/register.html">Sign up</a></p>
+      <p>Don't have an account? <a href="/Proyect/html/register.html">Sign up</a></p>
     </div>
     <p id="errorMessage"></p>
   </div>
