--- a/html/dashboard.html
+++ b/html/dashboard.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Energy Monitor</title>
     <!-- Enlaza la hoja de estilos CSS para el dashboard -->
-    <link rel="stylesheet" href="/css/dashboard.css">
+    <link rel="stylesheet" href="/Proyect/css/dashboard.css">
     <!-- Enlaza Font Awesome para los iconos (como el de usuario) -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 </head>
@@ -45,6 +45,6 @@
     </div>
 
     <!-- Enlaza el archivo JavaScript para el dashboard -->
-    <script src="/js/dashboard.js"></script>
+    <script src="/Proyect/js/dashboard.js"></script>
 </body>
 </html>
