--- a/html/forgot.html
+++ b/html/forgot.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Forgot Password</title>
-  <link rel="stylesheet" href="/css/forgot.css"/>
+  <link rel="stylesheet" href="/Proyect/css/forgot.css"/>
 </head>
 <body>
   <div class="forgot-container">
@@ -21,12 +21,12 @@
     </form>
 
     <div class="extra-options">
-      <p>Remembered it? <a href="/html/login.html">Back to Login</a></p>
+      <p>Remembered it? <a href="/Proyect/index.html">Back to Login</a></p>
     </div>
 
     <p id="infoMessage"></p>
   </div>
 
-  <script src="/js/forgot.js"></script>
+  <script src="/Proyect/js/forgot.js"></script>
 </body>
 </html>
