--- a/html/register.html
+++ b/html/register.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Create Account</title>
-  <link rel="stylesheet" href="/css/register.css"/>
+  <link rel="stylesheet" href="/Proyect/css/register.css"/>
 </head>
 <body>
   <div class="register-container">
@@ -18,12 +18,12 @@
     </form>
 
     <div class="extra-options">
-      <p>Already have an account? <a href="/html/login.html">Log in</a></p>
+      <p>Already have an account? <a href="/Proyect/index.html">Log in</a></p>
     </div>
 
     <p id="errorMessage"></p>
   </div>
 
-  <script src="/js/register.js"></script>
+  <script src="/Proyect/js/register.js"></script>
 </body>
 </html>
